Ship List page design added

--- a/Views/Admin/Ships.cshtml
+++ b/Views/Admin/Ships.cshtml
@@ -1,51 +1,49 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Ships";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="row">
     <div class="col-md-8 offset-md-2">
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken() <!-- CSRF token ekliyoruz -->
+        <form id="searchForm">
+            @Html.AntiForgeryToken() <!-- CSRF token'ı buraya ekliyoruz -->
             <div class="input-group">
-                <input type="search" class="form-control form-control-lg" id="searchInput" onkeyup="search()" placeholder="Type Ship name, IMO Number or Owner">
+                <input type="search" class="form-control form-control-lg" id="searchInput" autofocus onfocus="search()" onkeyup="search()" placeholder="Type Ship name, IMO Number or Owner Name">
                 <div class="input-group-append">
                     <button type="button" class="btn btn-lg btn-default" onclick="search()">
                         <i class="fa fa-search"></i>
                     </button>
                 </div>
             </div>
-        }
+        </form>
     </div>
 </div>
 
-<div id="searchResults"></div>
+<section class="content"><div id="searchResults" class="container-fluid"></div></section>
+
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-
-<script> 
+<script>
     function search() {
-        var query = $('#searchInput').val(); // jQuery ile input değerini alıyoruz
+        var query = $('#searchInput').val();
 
-        // CSRF token'ını alıyoruz
+        // CSRF token'ını formdan alıyoruz
         var token = $('input[name="__RequestVerificationToken"]').val();
 
         $.ajax({
-            url: '/Ship/Search', // İstek URL'si
-            type: 'POST', // İstek tipi
-            contentType: 'application/json', // Gönderilen verinin tipi
+            url: '@Url.Action("Search", "Ship")',
+            type: 'POST', 
+            contentType: 'application/x-www-form-urlencoded', 
             headers: {
-                'RequestVerificationToken': token // CSRF token'ı ekliyoruz
+                'RequestVerificationToken': token 
             },
-            data: JSON.stringify({ searchTerm: query }), // Arama terimini JSON formatında gönderiyoruz
+            data: { searchTerm: query }, 
             success: function (data) {
-                $('#searchResults').html(data); // Gelen veriyi arama sonuçları alanına yazdırıyoruz
+                $('#searchResults').html(data); 
             },
             error: function (xhr, status, error) {
-                console.error('Error:', error); // Hata durumunu konsola yazdırıyoruz
+                console.error('Error:', error); 
             }
         });
     }
