--- a/Views/Ship/_ShipSearchResults.cshtml
+++ b/Views/Ship/_ShipSearchResults.cshtml
@@ -4,10 +4,27 @@
 *@
 
 @model IEnumerable<Ship>
-
-<ul>
-    @foreach (var item in Model)
+<div style="height:15px;"> </div>
+<div class="row">
+    @foreach (var ship in Model)
     {
-        <li>@item.ShipName</li>
+        <div class="col-md-3">
+            <button class="card card-outline card-primary btn-block" style=" padding:0; text-align:left; background-color:transparent;" onclick="redirectToShipDetails(@ship.ShipId)">
+                <img cap" alt="" style="height: 180px; width: 100%; display: block;" src="@ship.PhotoUrl" data-holder-rendered="true">
+
+                <div class="card-body">
+                    <dl>
+                        <dt>@ship.ShipName</dt>
+                        <dd>Owner: @ship.ShipOwner.Name</dd>
+                        </dl>                   
+                </div>
+            </button>
+        </div>
     }
-</ul>
+</div>
+
+<script>
+    function redirectToShipDetails(shipId) {
+        window.location.href = '/Admin/ShipDetails/' + shipId;
+    }
+</script>
