--- a/Views/Admin/ShipOwners.cshtml
+++ b/Views/Admin/ShipOwners.cshtml
@@ -20,31 +20,30 @@
     </div>
 </div>
 
-<section class="content"><div id="searchResults" class="container-fluid"></div></section>
+<section class="content"><div id="searchResults"></div></section>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-<script>
-    function search() {
-        var query = $('#searchInput').val();
+    <script>
+        function search() {
+            var query = $('#searchInput').val();
 
-        var token = $('input[name="__RequestVerificationToken"]').val();
+            var token = $('input[name="__RequestVerificationToken"]').val();
 
-        $.ajax({
-            url: '@Url.Action("OwnerSearch", "Search")',
-            type: 'POST',
-            contentType: 'application/x-www-form-urlencoded',
-            headers: {
-                'RequestVerificationToken': token
-            },
-            data: { searchTerm: query },
-            success: function (data) {
-                $('#searchResults').html(data);
-            },
-            error: function (xhr, status, error) {
-                console.error('Error:', error);
-            }
-        });
-    }
+            $.ajax({
+                url: '@Url.Action("OwnerSearch", "Search")',
+                type: 'POST',
+                contentType: 'application/x-www-form-urlencoded',
+                headers: {
+                    'RequestVerificationToken': token
+                },
+                data: { searchTerm: query },
+                success: function (data) {
+                    $('#searchResults').html(data);
+                },
+                error: function (xhr, status, error) {
+                    console.error('Error:', error);
+                }
+            });
+        }
 
-</script>
+    </script>
