Authorize Login and Profile dropdown added

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -55,12 +55,12 @@
         <!-- /.login-logo -->
         <div class="card card-outline card-primary">
             <div class="card-header text-center">
-                <a href="~/ThemeData/AdminLTE/index2.html" class="h1"><b>Sea</b><i>Wise</i></a>
+                <a href="" class="h1"><b>Sea</b><i>Wise</i></a>
             </div>
             <div class="card-body">
                 <p class="login-box-msg">Sign in to start your session</p>
 
-                <form action="Account" method="post">
+                <form asp-controller="Account" asp-action="Login" method="post">
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
                             <div class="input-group-text">
