--- a/Views/Admin/OwnerProfile.cshtml
+++ b/Views/Admin/OwnerProfile.cshtml
@@ -9,7 +9,7 @@
 <div class="card card-success card-outline">
     <div class="card-header">
 
-        <h3 class="card-title"><i class="fas fa-id-badge"></i> &nbsp; Ship Owner's Profile</h3>
+        <h3 class="card-title"><i class="fas fa-id-card-alt"></i> &nbsp; Ship Owner's Profile</h3>
 
         <div class="card-tools">
             <button type="button" class="btn btn-tool" id="saveButton" hidden="hidden" >
