--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Seawise.Data;
+<!DOCTYPE html>
 <!-- saved from url=(0052)file:///C:/Users/Metin/Desktop/AdminLTE/layout.html# -->
 <html lang="en" style="height: auto;">
 <head>
@@ -77,7 +78,7 @@
                     <a class="nav-link" data-toggle="dropdown" href="file:///C:/Users/Metin/Desktop/AdminLTE/layout.html#" aria-expanded="false">
 
                         <div class="image">
-                            <img src="~/themedata/adminlte/dist/img/avatar.png" style="height: 25px;
+                            <img src="@ActiveUser.activeUser.PhotoUrl" style="height: 25px;
     " class="img-circle elevation-2" alt="User Image">
                         </div>
 
@@ -85,15 +86,19 @@
                     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right" style="left: inherit; right: 0px;">
                         <span class="dropdown-item dropdown-header">Account</span>
                         <div class="dropdown-divider"></div>
+                        <a href="#" class="dropdown-item text-center">
+                            <img src="@ActiveUser.activeUser.PhotoUrl" style="height: 30px;
+    " class="img-circle elevation-2" alt="User Image"></i> @ActiveUser.activeUser.Name @ActiveUser.activeUser.Surname
+                        </a>
+                        <div class="dropdown-divider"></div>
                         <a href="file:///C:/Users/Metin/Desktop/AdminLTE/layout.html#" class="dropdown-item">
                             <i class="fas fa-user mr-2"></i>Profile
                         </a>
 
 
 
-
                         <div class="dropdown-divider"></div>
-                        <a href="file:///C:/Users/Metin/Desktop/AdminLTE/layout.html#" class="dropdown-item dropdown-footer">
+                        <a asp-action="Logout" asp-controller="Account" class="dropdown-item dropdown-footer">
                             <i class="fas fa-sign-out-alt mr-2"></i>
                             Logout
                         </a>
@@ -152,7 +157,7 @@
                             <a href="file:///C:/Users/Metin/Desktop/AdminLTE/pages/kanban.html" class="nav-link">
                                 <i class="nav-icon fas fa-columns"></i>
                                 <p>
-                                    Ship Info Control
+                                    Ship Info
                                 </p>
                             </a>
                         </li>
@@ -162,6 +167,14 @@
                                 <i class="nav-icon fas fa-address-card"></i>
                                 <p>
                                     Owners List
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="@Url.Action("ShipOwners", "Admin")" class="nav-link" id="OwnerProfile">
+                                <i class="nav-icon fas fa-user"></i>
+                                <p>
+                                    Owner Profile
                                 </p>
                             </a>
                         </li>
