Owner Update and Ship Add added

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SeaWise App | Log in (v1)</title>
+    <title>SeaWise App | Log in</title>
     
 
     <!-- Google Font: Source Sans Pro -->
@@ -20,9 +20,6 @@
     <link rel="stylesheet" href="~/themedata/adminlte/dist/css/adminlte.min.css" />
 
 
-
-
-
     <style>
        
         body, html {
@@ -32,7 +29,6 @@
         }
 
         .login-page {
-            /* Arka plan resmi */
             background-image: url(@Url.Content("/images/LoginBackground.jpg") );
             background-size: cover; 
             background-position: center;
