--- a/Views/Search/OwnerSearchResult.cshtml
+++ b/Views/Search/OwnerSearchResult.cshtml
@@ -41,7 +41,7 @@
                             </div>
                             <div class="card-footer">
                                 <div class="text-right">
-                                    <a asp-controller="Admin" asp-action="OwnerProfile" asp-route-ownerId="@owner.ShipOwnerId" class="btn btn-sm btn-primary">
+                                    <a asp-controller="Owner" asp-action="Profile" asp-route-ownerId="@owner.ShipOwnerId" class="btn btn-sm btn-primary">
                                         <i class="fas fa-user"></i> View Profile
                                     </a>
                                 </div>
